// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query report query errors 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 13,
        "line": 3,
        "path": "/tmp/gql-test/a3a42c718deeb2f9a1f91a7f3a1453fcd8cd140f/query/query.gql",
      },
    ],
    "message": "Cannot query field \\"xViewer\\" on type \\"Query\\". Did you mean \\"viewer\\"? (FieldsOnCorrectType)",
    "severity": "error",
  },
]
`;

exports[`Schema can modify validation rule severity 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 11,
        "line": 5,
        "path": "/tmp/gql-test/8309fe02a24456fbb1f4315c654307a5402b478b/schema/schema.gql",
      },
    ],
    "message": "Unused type definition 'Hello' (NoUnusedTypeDefinition)",
    "severity": "error",
  },
]
`;

exports[`Schema can turn off validation rules 1`] = `Array []`;

exports[`Schema should report errors in schema 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 21,
        "line": 3,
        "path": "/tmp/gql-test/ca7b65d03c4b6f03d11204e53a0c1a7e510c5b29/schema/schema.gql",
      },
    ],
    "message": "Type \\"xViewer\\" not found.",
    "severity": "error",
  },
]
`;
